--- a/PayPal.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
+++ b/PayPal.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
@@ -66,7 +66,7 @@
                BlueprintIdentifier = "80D44ACE238DD6CD00D1A7BB"
                BuildableName = "NewTests.xctest"
                BlueprintName = "NewTests"
-               ReferencedContainer = "container:PayPalCommercePlatform.xcodeproj">
+               ReferencedContainer = "container:PayPal.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -88,7 +88,7 @@
             BlueprintIdentifier = "80BAD272234531B30050F86C"
             BuildableName = "Demo.app"
             BlueprintName = "Demo"
-            ReferencedContainer = "container:PayPalCommercePlatform.xcodeproj">
+            ReferencedContainer = "container:PayPal.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <MacroExpansion>
