Add IntegrationTests to travis
Signed-off-by: Samantha Cannillo <samantha.cannillo@getbraintree.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ cache:
 
 script:
   - set -o pipefail && xcodebuild -workspace PayPal.xcworkspace -scheme UnitTests -destination platform\=iOS\ Simulator,OS\=13.3,name\=iPhone\ 11 test | bundle exec xcpretty -c
-
+  - set -o pipefail && xcodebuild -workspace PayPal.xcworkspace -scheme IntegrationTests -destination platform\=iOS\ Simulator,OS\=13.3,name\=iPhone\ 11 test | bundle exec xcpretty -c
