Add UnitTests and IntegrationTests to Demo scheme. Update travis to run Demo scheme
Signed-off-by: Samantha Cannillo <samantha.cannillo@getbraintree.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,4 @@ cache:
   cocoapods: true
 
 script:
-  - set -o pipefail && xcodebuild -workspace PayPal.xcworkspace -scheme UnitTests -destination platform\=iOS\ Simulator,OS\=13.3,name\=iPhone\ 11 test | bundle exec xcpretty -c
-  - set -o pipefail && xcodebuild -workspace PayPal.xcworkspace -scheme IntegrationTests -destination platform\=iOS\ Simulator,OS\=13.3,name\=iPhone\ 11 test | bundle exec xcpretty -c
+  - set -o pipefail && xcodebuild -workspace PayPal.xcworkspace -scheme Demo -destination platform\=iOS\ Simulator,OS\=13.3,name\=iPhone\ 11 test | bundle exec xcpretty -c
