--- a/PayPal.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
+++ b/PayPal.xcodeproj/xcshareddata/xcschemes/Demo.xcscheme
@@ -36,36 +36,16 @@
                BlueprintIdentifier = "8066A04B235F5026007ACC28"
                BuildableName = "UnitTests.xctest"
                BlueprintName = "UnitTests"
-               ReferencedContainer = "container:BraintreePayPalValidator.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "802624442357C031005EA84A"
-               BuildableName = "UITests.xctest"
-               BlueprintName = "UITests"
-               ReferencedContainer = "container:BraintreePayPalValidator.xcodeproj">
+               ReferencedContainer = "container:PayPal.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8066A04B235F5026007ACC28"
-               BuildableName = "UnitTests.xctest"
-               BlueprintName = "UnitTests"
-               ReferencedContainer = "container:BraintreePayPalValidator.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "80D44ACE238DD6CD00D1A7BB"
-               BuildableName = "NewTests.xctest"
-               BlueprintName = "NewTests"
+               BlueprintIdentifier = "804588CF238489F800936C3A"
+               BuildableName = "IntegrationTests.xctest"
+               BlueprintName = "IntegrationTests"
                ReferencedContainer = "container:PayPal.xcodeproj">
             </BuildableReference>
          </TestableReference>
